fix: line-height too small, words were overlaping

--- a/src/scss/pages/page-glossary.scss
+++ b/src/scss/pages/page-glossary.scss
@@ -407,7 +407,7 @@
     font-size: 15px;
     color: #000000;
     letter-spacing: 0;
-    line-height: 2px;
+    line-height: 20px;
 
     &.border-right{
       border-right: 1px solid #E4E4E4;
